# py3status-cpu-governor

./: PKGBUILD  README.md  cpu_governor.py  pyproject.toml
src/: py3status_cpu_governor.py
src/py3status_cpu_governor/: cpu_governor.py
