[tool.poetry]
name = "py3status-cpu-governor"
version = "0.1.3"
description = "py3status monitor to show the state of your cpu governor"
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mcgillij/py3status-cpu-governor"
repository = "https://github.com/mcgillij/py3status-cpu-governor"
documentation = "https://github.com/mcgillij/py3status-cpu-governor"
keywords = ["cpu", "governor", "py3status", "i3", "monitor"]
include = [ "LICENSE", ]

classifiers = [
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
]

[tool.poetry.plugins."py3status"]
module = "py3status_cpu_governor.cpu_governor"

[tool.poetry.dependencies]
python = "^3.9 || ^3.10"
py3status = "^3.34"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
